# rust-contactbook-api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: main.rs  modules.rs
src/modules/: api.rs  contact.rs  database.rs
