[package]
name = "rust-contactbook-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["json"] }
tokio = { version = "1.32", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }

sqlx = { version = "0.7.1", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "time",
] }
tower = "0.4.13"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
dotenv = "0.15"
